[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cf"
version = "0.1.2"
authors = [
  { name="Gabriel Massadas" },
]
dependencies = [
  'sqlparse',
]
description = "django-cf is a package that integrates Django with Cloudflare products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[dependency-groups]
dev = [
    "pytest",
    "requests",
    "ruff",
    "django",
]

[project.urls]
"Homepage" = "https://github.com/G4brym/django-cf"
"Bug Reports" = "https://github.com/G4brym/django-cf/issues"
"Source" = "https://github.com/G4brym/django-cf"

[tool.setuptools]
packages = ["django_cf", "django_cf.d1_api", "django_cf.d1_binding", "django_cf.do_binding"]
