[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cf"
version = "0.2.1"
authors = [
  { name="Gabriel Massadas" },
]
dependencies = [
  'sqlparse',
]
description = "django-cf is a package that integrates Django with Cloudflare products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
    "ruff",
    "django",
]

[project.urls]
"Homepage" = "https://github.com/G4brym/django-cf"
"Bug Reports" = "https://github.com/G4brym/django-cf/issues"
"Source" = "https://github.com/G4brym/django-cf"

[tool.setuptools]
packages = ["django_cf", "django_cf.db.backends.d1", "django_cf.db.backends.do", "django_cf.middleware"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
