[project]
name = "django-on-workers-with-durable-objects"
version = "0.1.0"
description = "This template provides a starting point for running a Django application on Cloudflare Workers, utilizing Cloudflare Durable Objects for stateful data persistence."
requires-python = ">=3.12"
dependencies = [
    "django-cf",
    "django==5.2.6",
    "tzdata",
]

[dependency-groups]
dev = ["workers-py"]
