[project]
name = "django-cf-r2-test-server"
version = "0.1.0"
description = "R2 test server for django-cf integration tests"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "django-cf",
    "django==5.2.6",
    "tzdata",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
